--- a/application/view/shared/vlayout.html
+++ b/application/view/shared/vlayout.html
@@ -2,32 +2,48 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
-   <meta name="theme-color" content="#9C27B0">
-    <meta name="msapplication-navbutton-color" content="#9C27B0">
+   <meta name="theme-color" content="#1d686e">
+    <meta name="msapplication-navbutton-color" content="#1d686e">
     <meta name="apple-mobile-web-app-capable" content="yes">
      <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
      <meta name="msapplication-TileColor" content="#2F3BA2">
        
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
+<meta name="description" content="simple.js is a simple easy to use nodejs application development framework for the web">
+<meta name="keywords" content="node, JavaScript,programming, web, development ">
  <title>{{title}}</title>
-<!-- <script data-main="/js/main" src="/js/require.js"></script> -->
-  <link rel="shortcut icon"" href="/image/favicon.ico" type="image/x-icon">
-  
+
+  <link rel="stylesheet"  type="text/css" href="/css/style.css" />
+  <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+  <link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+ <script src='https://www.google.com/recaptcha/api.js'></script>
 </head>
   <body>
-    
-    
+   <div class="header">
+       <div class="hcenter">
+       <div class="logo"><img src="/images/simplelogo.png" alt="Simple js logo" /></div>
+       </div>
+   </div>
    <div class="maincontent" id="maincontent">
          
     <div  class="content">
-
+     
+     
      $generateContent();
     
        </div>
     
    </div>
- 
+ <div class="footer">
+     <div class="right">
+         <a href="tel:+17676161629" style="text-decoration:none"> &nbsp;<img style="vertical-align:middle" src='/images/call.png' height='22' alt="call us" />Call us</a>
+         <a href="javascript:void(0);" id="feedback">feedback</a>
+         <a href id="ct" ></a>
+     </div>
+ </div>
+ <div  class="tras-min-height trans-opacity" id="toast"></div>
+ <script type="text/javascript" src="/js/site.js"> </script> 
  </body>
  </html>
  
